<resources>
    <string name="app_name">GT-4m</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="task">Task</string>
    <string name="profile">Profile</string>
    <string name="skip">Skip</string>
    <string name="get_start">Get Started</string>
    <string name="exception">Exception</string>
    <string name="confirm_delete">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="google">Google</string>
    <string name="log_out">Log out</string>
    <string name="save">Save</string>
    <string name="quote">Quote</string>
    <string name="author">Author</string>
    <string name="edit">Edit</string>
</resources>